--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -132,7 +132,7 @@
     </div>
 
     <div class="table3">
-        <h2><small>Products</small></h2>
+        <h2><small>Sales</small></h2>
         <div class="Card">
             <div class="CardInner">
                 <div class="container">
